--- a/style/output.css
+++ b/style/output.css
@@ -717,10 +717,6 @@ video {
   margin-top: 0.75rem;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
@@ -737,12 +733,20 @@ video {
   height: 60px;
 }
 
-.h-\[40\] {
-  height: 40;
+.h-\[\] {
+  height: ;
 }
 
-.h-\[40\[\]\] {
-  height: 40[];
+.h-\[32px\] {
+  height: 32px;
+}
+
+.h-\[226\] {
+  height: 226;
+}
+
+.h-\[226px\] {
+  height: 226px;
 }
 
 .w-\[250px\] {
@@ -765,16 +769,40 @@ video {
   width: 60%;
 }
 
-.w-\[1\] {
-  width: 1;
+.w-\[\] {
+  width: ;
 }
 
-.w-\[155px\] {
-  width: 155px;
+.w-\[3\] {
+  width: 3;
 }
 
-.w-\[255px\] {
-  width: 255px;
+.w-\[36\] {
+  width: 36;
+}
+
+.w-\[360\] {
+  width: 360;
+}
+
+.w-\[360p\] {
+  width: 360p;
+}
+
+.w-\[360px\] {
+  width: 360px;
+}
+
+.w-\[223px\] {
+  width: 223px;
+}
+
+.w-\[3px\] {
+  width: 3px;
+}
+
+.w-\[303px\] {
+  width: 303px;
 }
 
 .-translate-x-1\/2 {
@@ -831,6 +859,10 @@ video {
   cursor: pointer;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -865,6 +897,14 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -919,6 +959,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-br-\[20px\] {
   border-bottom-right-radius: 20px;
 }
@@ -962,11 +1006,6 @@ video {
   background-color: rgb(147 181 227 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#999999\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 153 153 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#B85BF0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(184 91 240 / var(--tw-bg-opacity, 1));
@@ -1005,6 +1044,10 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\] {
+  background-color: ;
 }
 
 .p-3 {
@@ -1057,6 +1100,16 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .pb-16 {
@@ -1223,23 +1276,22 @@ video {
   background-color: rgb(238 168 19 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-\[\#ff723e\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 114 62 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-\[\#ff924f\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 146 79 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-\[\#fcfcfc\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 252 252 / var(--tw-bg-opacity, 1));
+.hover\:bg-\[\]:hover {
+  background-color: ;
 }
 
-.hover\:bg-\[\#\]:hover {
-  background-color: #;
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
+.hover\:bg-yellow-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-\[\#F1C05B\]:hover {
@@ -1317,10 +1369,6 @@ video {
     display: none;
   }
 
-  .sm360\:h-\[1px\] {
-    height: 1px;
-  }
-
   .sm360\:w-\[100\%\] {
     width: 100%;
   }
@@ -1361,34 +1409,32 @@ video {
     width: 320px;
   }
 
-  .sm360\:w-\[65\%\] {
-    width: 65%;
+  .sm360\:w-\[00\%\] {
+    width: 00%;
   }
 
-  .sm360\:w-\[66\%\] {
-    width: 66%;
+  .sm360\:w-\[0\%\] {
+    width: 0%;
   }
 
-  .sm360\:w-\[76\%\] {
-    width: 76%;
+  .sm360\:w-\[70\%\] {
+    width: 70%;
   }
 
-  .sm360\:scale-\[0\.38\] {
-    --tw-scale-x: 0.38;
-    --tw-scale-y: 0.38;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .sm360\:w-\[60\%\] {
+    width: 60%;
   }
 
-  .sm360\:scale-\[0\.6\] {
-    --tw-scale-x: 0.6;
-    --tw-scale-y: 0.6;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .sm360\:w-\[20\%\] {
+    width: 20%;
   }
 
-  .sm360\:scale-\[0\.8\] {
-    --tw-scale-x: 0.8;
-    --tw-scale-y: 0.8;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .sm360\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .sm360\:w-\[50\%\] {
+    width: 50%;
   }
 
   .sm360\:grid-cols-1 {
@@ -1429,10 +1475,6 @@ video {
 
   .sm360\:gap-5 {
     gap: 1.25rem;
-  }
-
-  .sm360\:gap-6 {
-    gap: 1.5rem;
   }
 
   .sm360\:p-\[25px\] {
@@ -1640,20 +1682,6 @@ video {
     width: 620px;
   }
 
-  .sm\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .sm\:w-\[87\%\] {
-    width: 87%;
-  }
-
-  .sm\:scale-\[0\.44\] {
-    --tw-scale-x: 0.44;
-    --tw-scale-y: 0.44;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1783,12 +1811,6 @@ video {
     width: 730px;
   }
 
-  .md\:scale-\[0\.38\] {
-    --tw-scale-x: 0.38;
-    --tw-scale-y: 0.38;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .md\:grid-cols-\[100px_100px_100px\] {
     grid-template-columns: 100px 100px 100px;
   }
@@ -1880,6 +1902,10 @@ video {
     display: none;
   }
 
+  .lg\:h-auto {
+    height: auto;
+  }
+
   .lg\:w-\[150px\] {
     width: 150px;
   }
@@ -1894,18 +1920,6 @@ video {
 
   .lg\:w-\[300px\] {
     width: 300px;
-  }
-
-  .lg\:w-\[82\%\] {
-    width: 82%;
-  }
-
-  .lg\:w-\[84\%\] {
-    width: 84%;
-  }
-
-  .lg\:w-\[89\%\] {
-    width: 89%;
   }
 
   .lg\:w-\[900px\] {
@@ -1987,15 +2001,16 @@ video {
     width: 300px;
   }
 
-  .xl\:w-\[85\%\] {
-    width: 85%;
+  .xl\:justify-center {
+    justify-content: center;
   }
 
-  .xl\:w-\[87\%\] {
-    width: 87%;
+  .xl\:gap-y-20 {
+    row-gap: 5rem;
   }
 
-  .xl\:w-\[91\%\] {
-    width: 91%;
+  .xl\:gap-x-20 {
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
   }
 }
